@@ -1,3 +1,8 @@
+2014-04-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/bonds.cpp: More Rcpp Attributes
+	* R/bond.R: More corresponding changes
+
 2014-04-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/bonds.cpp: Partially changed to use Rcpp Attributes
